Correcciones menores de estilo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<script src="assets/js/jquery-3.2.1.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.9.0/css/flag-icon.min.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -62,7 +65,7 @@
 				<div class="row padding-t">
 					<div class="col-xs-4">
 						<select class="form-control form padding-t" id="countries-code">
-	  					<option value="">+(País)</option>
+	  					<option>+(País)</option>
 	  					<option value="52">MX</option>
 	  					<option value="56">CL</option>
 	  					<option value="51">PE</option>
